[Hotfix]: 가비아 문자 전송 오류